--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -82,12 +82,16 @@ skills:
       durationIncreasePerLevel: 1.5
     slash:
       enabled: true
-      cooldown: 17.0
       maxlevel: 3
-      distance: 5.0
-      cooldownReductionPerHit: 4.0
+      cooldown: 17.0
+      cooldownDecreasePerLevel: 1.0
       damage: 2.0
       damageIncreasePerLevel: 2.0
+      distance: 5.0
+      cooldownReductionPerHit: 4.0
+      distanceIncreasePerLevel: 1.0
+      cooldownReduction: 4.0
+      cooldownReductionPerLevel: 1.0
     excessiveforce:
       enabled: true
       cooldown: 16.0
