--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -242,9 +242,10 @@ skills:
     thorns:
       enabled: true
       maxlevel: 3
-      baseDamagePercent: 0.4
-      percentIncreasePerLevel: 0.1
+      baseDamage: 3.0
+      damageIncreasePerLevel: 1.0
       reflectTime: 2.0
+      hitsToTrigger: 3
     sacrifice:
       enabled: true
       maxlevel: 3
