--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -665,7 +665,7 @@ skills:
       chargeIncreasePerLevel: 10.0
       baseDamage: 2.0
       damageIncreasePerLevel: 1.0
-      slowDuration: 3.0
+      baseSlowDuration: 3.0
       slowDurationIncreasePerLevel: 0.0
       slowStrength: 2
     stunningshot:
@@ -727,7 +727,7 @@ skills:
     huntersthrill:
       enabled: true
       maxlevel: 3
-      maxTimeBetweenShots: 8.0
+      baseMaxTimeBetweenShots: 8.0
       maxConsecutiveHits: 4
       maxTimeBetweenShotsIncreasePerLevel: 1.0
       baseDuration: 6.0
@@ -761,7 +761,7 @@ skills:
       enabled: true
       maxlevel: 3
       maxTimeBetweenShots: 5.0
-      maxConsecutiveHits: 2
+      baseMaxConsecutiveHits: 2
       maxConsecuteiveHitsIncreasePerLevel: 2
       baseDamage: 1.0
       damageIncreasePerLevel: 0.0
