--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -10,6 +10,7 @@ skills:
       leapStrength: 1.3
       wallKickStrength: 0.9
       wallKickInternalCooldown: 1.0
+      fallDamageLimit: 8.0
     sever:
       enabled: true
       cooldown: 20.0
@@ -554,6 +555,7 @@ skills:
       damageIncreasePerLevel: 1.0
       cooldownDecreasePerLevel: 2.0
       slamDelay: 500
+      fallDamageLimit: 20.0
     whirlwindsword:
       enabled: true
       maxlevel: 5
@@ -689,6 +691,7 @@ skills:
       maxlevel: 5
       cooldown: 8.0
       cooldownDecreasePerLevel: 1.0
+      fallDamageLimit: 8.0
     levitatingshot:
       enabled: true
       maxlevel: 5
