Waiting for library update for 1.20.4 compatiblity

--- a/clans/src/main/resources/configs/config.yml
+++ b/clans/src/main/resources/configs/config.yml
@@ -55,9 +55,9 @@ clans:
   dominance:
     enabled: true
 server:
-  isHub: false
   sidebar:
-    title: Mineplex Clans
+    title: BetterPvP
+    enabled: true
   world:
     fastNightCycle: true
     mainWorld: world
