Revert "multi resource pack support"
This reverts commit 92f5f22210d3c44764e0d15d097ffe1267852bf7.

--- a/core/src/main/resources/configs/config.yml
+++ b/core/src/main/resources/configs/config.yml
@@ -31,6 +31,10 @@ hunger:
   enabled: false
 discord:
   chatWebhook: ''
+resourcepack:
+  force: false
+  sha: dc1e31891324d735202029a646d2e29592d13061
+  url: https://betterpvp.net/betterpvptextures.zip
 weather:
   enabled: false
 items:
