Bulls Eye Changes

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -670,6 +670,7 @@ skills:
       curveDistanceIncreasePerLevel: 0.5
       baseBonusDamage: 2.0
       bonusDamageIncreasePerLevel: 1.0
+      bonusCurveDistance: 0.5
     wolfspounce:
       enabled: true
       maxlevel: 5
