nerf mining XP rates

--- a/progression/src/main/resources/configs/config.yml
+++ b/progression/src/main/resources/configs/config.yml
@@ -1,26 +1,26 @@
 mining:
   minLeaderboardBlockXp: 45
   xpPerBlock:
-    STONE: 15
-    ANDESITE: 15
-    GRANITE: 15
-    COBBLESTONE: 15
-    REDSTONE_ORE: 50
-    DIAMOND_ORE: 50
-    GOLD_ORE: 50
-    COPPER_ORE: 50
-    IRON_ORE: 50
-    COAL_ORE: 50
-    LAPIS_ORE: 50
-    EMERALD_ORE: 50
-    DEEPSLATE_REDSTONE_ORE: 50
-    DEEPSLATE_DIAMOND_ORE: 50
-    DEEPSLATE_GOLD_ORE: 50
-    DEEPSLATE_COPPER_ORE: 50
-    DEEPSLATE_IRON_ORE: 50
-    DEEPSLATE_COAL_ORE: 50
-    DEEPSLATE_LAPIS_ORE: 50
-    DEEPSLATE_EMERALD_ORE: 50
+    STONE: 1
+    ANDESITE: 1
+    GRANITE: 1
+    COBBLESTONE: 1
+    REDSTONE_ORE: 10
+    DIAMOND_ORE: 10
+    GOLD_ORE: 10
+    COPPER_ORE: 10
+    IRON_ORE: 10
+    COAL_ORE: 10
+    LAPIS_ORE: 10
+    EMERALD_ORE: 10
+    DEEPSLATE_REDSTONE_ORE: 10
+    DEEPSLATE_DIAMOND_ORE: 10
+    DEEPSLATE_GOLD_ORE: 10
+    DEEPSLATE_COPPER_ORE: 10
+    DEEPSLATE_IRON_ORE: 10
+    DEEPSLATE_COAL_ORE: 10
+    DEEPSLATE_LAPIS_ORE: 10
+    DEEPSLATE_EMERALD_ORE: 10
   perks:
     drop-multiplier:
       enabled: true
@@ -217,3 +217,6 @@ command:
   stats:
     enabled: true
     requiredRank: PLAYER
+  mining:
+    enabled: true
+    requiredRank: ADMIN
