--- a/champions/src/main/resources/configs/weapons/standard.yml
+++ b/champions/src/main/resources/configs/weapons/standard.yml
@@ -30,6 +30,9 @@ energy_elixir:
   enabled: true
   cooldown: 12.0
   energyRegen: 0.5
+water_bottle:
+  enabled: true
+  cooldown: 10.0
 ranger_boots:
   enabled: true
 power_sword:
