--- a/clans/src/main/resources/configs/config.yml
+++ b/clans/src/main/resources/configs/config.yml
@@ -257,6 +257,10 @@ fields:
       respawn: 60.0
       min: 1
       max: 3
+    gildedblackstone:
+      respawn: 60.0
+      min: 1
+      max: 3
     emeraldore:
       respawn: 60.0
       min: 1
