Add anvils and other misc blocks to nonRestorableBlocks

--- a/clans/src/main/resources/configs/config.yml
+++ b/clans/src/main/resources/configs/config.yml
@@ -37,6 +37,13 @@ clans:
       - WATER
       - ICE
       - LAVA
+      - ANVIL
+      - CHIPPED_ANVIL
+      - DAMAGED_ANVIL
+      - RAW_GOLD_BLOCK
+      - RAW_IRON_BLOCK
+      - BEE_NEST
+      - RED_BED
   pillage:
     duration: 15
     noDominanceCooldown: 4
