Reduce Takedown fall damage

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -634,6 +634,7 @@ skills:
       recoilDamageIncreasePerLevel: 0.5
       damageIncreasePerLevel: 1.0
       velocityStrength: 1.5
+      fallDamageLimit: 4.0
     unstoppableforce:
       enabled: true
       maxlevel: 5
