Decrease alligators tooth velocity Fixes most tooth bugs, added energy multiplier when skimming water surface

--- a/champions/src/main/resources/configs/weapons/legendaries.yml
+++ b/champions/src/main/resources/configs/weapons/legendaries.yml
@@ -1,10 +1,11 @@
 alligators_tooth:
   enabled: true
   baseDamage: 8.0
-  energyPerTick: 1.5
+  energyPerTick: 1.0
   initialEnergyCost: 10.0
   bonusDamage: 4.0
-  velocityStrength: 1.0
+  velocityStrength: 0.7
+  skimmingEnergyMultiplier: 3.0
 wind_blade:
   enabled: true
   baseDamage: 7.0
