--- a/progression/src/main/resources/configs/config.yml
+++ b/progression/src/main/resources/configs/config.yml
@@ -13,6 +13,7 @@ mining:
     COAL_ORE: 10
     LAPIS_ORE: 10
     EMERALD_ORE: 10
+    GILDED_BLACKSTONE: 10
     DEEPSLATE_REDSTONE_ORE: 10
     DEEPSLATE_DIAMOND_ORE: 10
     DEEPSLATE_GOLD_ORE: 10
