Setting for skill tooltip, optimization & minor balance tweaks

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -385,6 +385,7 @@ skills:
       baseShockDuration: 2.0
       maxTarget: 3
       shockDuration: 2.0
+      velocityStrength: 3.0
     swarm:
       enabled: true
       maxlevel: 5
